--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -5,7 +5,8 @@
   padding: 20px 0 0;
   border: 1px solid #777777;
   border-radius: 10px;
-  box-shadow: 5px 5px 5px rgba(3, 3, 3, 0.1);
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
   background-color: #fff;
   font-family: Arial, sans-serif;
 }
@@ -62,12 +63,12 @@
 }
 
 .stat-label {
-  font-size: 12px;
-  color: #777;
+  font-size: 16px;
+  color: #2e2e2e;
 }
 
 .stat-value {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   color: #333;
 }
