--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -3,7 +3,7 @@
   justify-content: center;
   margin-top: 50px;
   gap: 30px;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 .item {
@@ -19,6 +19,12 @@
   border-radius: 10px;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: translateY(5px);
+  box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
 .image {
