--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -9,6 +9,12 @@
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
   background-color: #fff;
   font-family: Arial, sans-serif;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.card:hover {
+  transform: translateY(5px);
+  box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.3);
 }
 
 .profile-info {
