--- a/src/components/FriendList/FriendList.module.css
+++ b/src/components/FriendList/FriendList.module.css
@@ -25,6 +25,7 @@
 .card:hover {
   transform: translateY(5px);
   box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .image {
