--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -1,4 +1,3 @@
-/* Profile.module.css */
 .card {
   width: 300px;
   margin: 20px auto;
@@ -15,6 +14,7 @@
 .card:hover {
   transform: translateY(5px);
   box-shadow: inset 0 6px 12px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
 }
 
 .profile-info {
