--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -2,7 +2,7 @@
   width: 300px;
   margin: 20px auto;
   padding: 20px 0 0;
-  border: 1px solid #777777;
+  border: 2px solid #777777;
   border-radius: 10px;
   box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3);
@@ -51,17 +51,25 @@
 
 .stats {
   width: 100%;
+  height: 80px;
   display: flex;
-  justify-content: space-around;
   align-items: center;
   border-top: 2px solid #494848;
-  padding: 20px 0;
   background-color: #e2dfdf;
   border-radius: 0 0 10px 10px;
 }
 
 .stat-item {
+  width: 100%;
+  height: 100%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.stat-item:not(:last-child) {
+  border-right: 2px solid #494848;
 }
 
 .stat-item span {
